# CroPaC-Binaural

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-plugin.bat
_CroPaC_binaural/: cropac_binaural.jucer
_CroPaC_binaural/src/: PluginEditor.cpp
audio_plugin/: CMakeLists.txt  build-plugin.bat
audio_plugin/_CroPaC_binaural/: cropac_binaural.jucer
audio_plugin/_CroPaC_binaural/src/: PluginProcessor.cpp  PluginProcessor.h  log2dSlider.cpp  log2dSlider.h
audio_plugin/_CroPaC_binaural_/: CMakeLists.txt  cropac_binaural.jucer
audio_plugin/_CroPaC_binaural_/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  log2dSlider.cpp  log2dSlider.h
audio_plugin/hcropaclib/src/: hcropaclib.c
audio_plugin/resources/: CroPaCLookAndFeel.h  ParameterManager.h
audio_plugins/: build-plugin.bat
audio_plugins/_CroPaC_binaural/juce/cropac_binaural/: cropac_binaural.jucer
audio_plugins/_CroPaC_binaural/juce/cropac_binaural/JuceLibraryCode/: AppConfig.h  JuceHeader.h
audio_plugins/_CroPaC_binaural/src/: PluginEditor.h  PluginProcessor.h  log2dSlider.cpp  log2dSlider.h
audio_plugins/hcropaclib/include/: hcropaclib.h
audio_plugins/hcropaclib/src/: hcropac_internal.c  hcropac_internal.h  hcropaclib.c
hcropaclib/src/: hcropac_internal.h
libs/: CMakeLists.txt
libs/hcropaclib/include/: hcropaclib.h
libs/hcropaclib/src/: hcropac_internal.c  hcropac_internal.h  hcropaclib.c
