 
message(STATUS "Configuring CroPaC-Binaural...")

# Versions to build:
set(BUILD_PLUGIN_FORMATS "")
if (BUILD_PLUGIN_FORMAT_VST2)
    juce_set_vst2_sdk_path(${CMAKE_CURRENT_SOURCE_DIR}/../SDKs/VST2_SDK)
    list(APPEND BUILD_PLUGIN_FORMATS VST)
    message("--  Building VST versions")
endif()
if (BUILD_PLUGIN_FORMAT_VST3) 
    list(APPEND BUILD_PLUGIN_FORMATS VST3)
    message("--  Building VST3 versions")
endif()
if (BUILD_PLUGIN_FORMAT_AU) 
    list(APPEND BUILD_PLUGIN_FORMATS AU)
    message("--  Building AU versions")
endif()
if (BUILD_PLUGIN_FORMAT_LV2) 
    list(APPEND BUILD_PLUGIN_FORMATS LV2)
    message("--  Building LV2 versions")
endif()
if (BUILD_PLUGIN_FORMAT_AAX) 
    list(APPEND BUILD_PLUGIN_FORMATS AAX)
    message("--  Building AAX versions")
endif()
if (BUILD_PLUGIN_FORMAT_STANDALONE) 
    list(APPEND BUILD_PLUGIN_FORMATS Standalone)
    message("--  Building Standalone versions")
endif()

# These plug-ins rely on the saf_sofa_reader module being enabled:
if(SAF_ENABLE_SOFA_READER_MODULE)
    add_subdirectory(_CroPaC_binaural_) 
else()
    message(STATUS "  Note: disabling, as it relies on the saf_sofa_reader module.")
endif()